[package]
name = "php-deserial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
log = "0.4.17"
nom = "7.1.3"
nom-supreme = "0.8.0"
once_cell = "1.17.1"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
